[gd_scene load_steps=23 format=2]

[ext_resource path="res://jogoDINO/dino/png/Idle (9).png" type="Texture" id=1]
[ext_resource path="res://jogoDINO/dino/png/Dead (6).png" type="Texture" id=2]
[ext_resource path="res://jogoDINO/dino/png/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://jogoDINO/dino/png/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://jogoDINO/dino/png/Idle (8).png" type="Texture" id=5]
[ext_resource path="res://jogoDINO/dino/png/Idle (7).png" type="Texture" id=6]
[ext_resource path="res://jogoDINO/dino/png/Dead (1).png" type="Texture" id=7]
[ext_resource path="res://jogoDINO/dino/png/Dead (3).png" type="Texture" id=8]
[ext_resource path="res://jogoDINO/dino/png/Dead (4).png" type="Texture" id=9]
[ext_resource path="res://jogoDINO/dino/png/Dead (2).png" type="Texture" id=10]
[ext_resource path="res://jogoDINO/dino/png/Idle (10).png" type="Texture" id=11]
[ext_resource path="res://jogoDINO/dino/png/Dead (5).png" type="Texture" id=12]
[ext_resource path="res://jogoDINO/dino/png/Dead (7).png" type="Texture" id=13]
[ext_resource path="res://jogoDINO/dino/png/Dead (8).png" type="Texture" id=14]
[ext_resource path="res://jogoDINO/dino/png/Idle (3).png" type="Texture" id=15]
[ext_resource path="res://jogoDINO/dino/png/Idle (4).png" type="Texture" id=16]
[ext_resource path="res://jogoDINO/dino/png/Idle (6).png" type="Texture" id=17]
[ext_resource path="res://jogoDINO/dino/png/Idle (5).png" type="Texture" id=18]
[ext_resource path="res://jogoDINO/Sprite/dino.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.25, 53 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 196.5, 134.5 )

[node name="Dino" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 184, -16 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="DanoPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DanoPlayer"]
position = Vector2( 56, 112 )
shape = SubResource( 2 )

[node name="DeadDino" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadDino"]
position = Vector2( 42, -76 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DanoPlayer" to="." method="_on_DanoPlayer_body_entered"]
[connection signal="body_entered" from="DeadDino" to="." method="_on_DeadDino_body_entered"]
